// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`files — list row rendering > given a file load error > renders the error message with consistent padding 1`] = `
[
  "[borderAccent:╭][borderAccent:──────────────────────────────────────────][border:┬][border:───────────────────────────────────────────────────────────────────────────][border:╮]",
  "[borderAccent:│][borderAccent:[accent: Files (0 selected) (0/0)[0m                 ]][border:│][border:[accent: Source Preview[0m                                                            ]][border:│]",
  "[borderAccent:├][borderAccent:──────────────────────────────────────────][border:┼][border:───────────────────────────────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│][error: Error: Failed to load files: rg: c[border:│][0m[dim:  No preview available][0m                                               [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:├][borderAccent:──────────────────────────────────────────][border:┴][border:───────────────────────────────────────────────────────────────────────────][border:┤]",
  "[border:│][dim: ↑ nav  pgup scroll  ctrl+e edit[0m                                                                                      ][border:│]",
  "[border:╰][border:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][border:╯]",
]
`;

exports[`files — list row rendering > given a list of files > renders file rows with consistent padding across different path lengths 1`] = `
[
  "[borderAccent:╭][borderAccent:──────────────────────────────────────────][border:┬][border:───────────────────────────────────────────────────────────────────────────][border:╮]",
  "[borderAccent:│][borderAccent:[accent: Files (0 selected) (3/3)[0m                 ]][border:│][border:[accent: agent/extensions/ide/components/files.ts[0m                                  ]][border:│]",
  "[borderAccent:├][borderAccent:──────────────────────────────────────────][border:┼][border:───────────────────────────────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│][BG:selectedBg:[accent:** 󰛦 agent/extensio[border:│][0m  agent/extensions/ide/components/files.ts[0m                                 [border:│]",
  "[borderAccent:│] 󰛦 agent/extensions/ide/components/list-pi[border:│][0m  agent/extensions/ide/components/list-picker.ts[0m                           [border:│]",
  "[borderAccent:│] 󰛦 agent/extensions/nix/nix.test.ts[0m       [border:│][0m  agent/extensions/nix/nix.test.ts[0m                                         [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m  [0m                                                                         [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:├][borderAccent:──────────────────────────────────────────][border:┴][border:───────────────────────────────────────────────────────────────────────────][border:┤]",
  "[border:│][dim: ↑ nav  pgup scroll  ctrl+e edit  ctrl+i insert  ctrl+t inspect  ctrl+d delete  ctrl+u used-by  space select  ctrl+s s][border:│]",
  "[border:╰][border:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][border:╯]",
]
`;

exports[`files — list row rendering > given a list of files > renders file rows with mixed extensions and consistent left alignment 1`] = `
[
  "[borderAccent:╭][borderAccent:──────────────────────────────────────────][border:┬][border:───────────────────────────────────────────────────────────────────────────][border:╮]",
  "[borderAccent:│][borderAccent:[accent: Files (0 selected) (6/6)[0m                 ]][border:│][border:[accent: src/index.ts[0m                                                              ]][border:│]",
  "[borderAccent:├][borderAccent:──────────────────────────────────────────][border:┼][border:───────────────────────────────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│][BG:selectedBg:[accent:** 󰛦 src/index.ts**[border:│][0m  src/index.ts[0m                                                             [border:│]",
  "[borderAccent:│] 󰛦 src/utils/helper.ts[0m                    [border:│][0m  src/utils/helper.ts[0m                                                      [border:│]",
  "[borderAccent:│] 󰍔 README.md[0m                              [border:│][0m  README.md[0m                                                                [border:│]",
  "[borderAccent:│] 󰎙 package.json[0m                           [border:│][0m  package.json[0m                                                             [border:│]",
  "[borderAccent:│] 󱄅 flake.nix[0m                              [border:│][0m  flake.nix[0m                                                                [border:│]",
  "[borderAccent:│] 󰛦 __tests__/test.test.ts[0m                 [border:│][0m  __tests__/test.test.ts[0m                                                   [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:├][borderAccent:──────────────────────────────────────────][border:┴][border:───────────────────────────────────────────────────────────────────────────][border:┤]",
  "[border:│][dim: ↑ nav  pgup scroll  ctrl+e edit  ctrl+i insert  ctrl+t inspect  ctrl+d delete  ctrl+u used-by  space select  ctrl+s s][border:│]",
  "[border:╰][border:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][border:╯]",
]
`;

exports[`files — list row rendering > given a list of files > renders rows with leading space before file icons 1`] = `
[
  "[borderAccent:╭][borderAccent:──────────────────────────────────────────][border:┬][border:───────────────────────────────────────────────────────────────────────────][border:╮]",
  "[borderAccent:│][borderAccent:[accent: Files (0 selected) (3/3)[0m                 ]][border:│][border:[accent: a.ts[0m                                                                      ]][border:│]",
  "[borderAccent:├][borderAccent:──────────────────────────────────────────][border:┼][border:───────────────────────────────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│][BG:selectedBg:[accent:** 󰛦 a.ts**][0m       [border:│][0m  a.ts[0m                                                                     [border:│]",
  "[borderAccent:│] 󰛦 agent/extensions/ide/components/list-pi[border:│][0m  agent/extensions/ide/components/list-picker.test.ts[0m                      [border:│]",
  "[borderAccent:│] 󰛦 agent/extensions/nix/nix.test.ts[0m       [border:│][0m  agent/extensions/nix/nix.test.ts[0m                                         [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m  [0m                                                                         [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:├][borderAccent:──────────────────────────────────────────][border:┴][border:───────────────────────────────────────────────────────────────────────────][border:┤]",
  "[border:│][dim: ↑ nav  pgup scroll  ctrl+e edit  ctrl+i insert  ctrl+t inspect  ctrl+d delete  ctrl+u used-by  space select  ctrl+s s][border:│]",
  "[border:╰][border:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][border:╯]",
]
`;

exports[`files — list row rendering > given a long file list > maintains consistent row padding when terminal height is smaller than file count 1`] = `
[
  "[borderAccent:╭][borderAccent:────────────────────────────][border:┬][border:─────────────────────────────────────────────────][border:╮]",
  "[borderAccent:│][borderAccent:[accent: Files (0 selected) (30/30)[0m ]][border:│][border:[accent: agent/extensions/ide/components/file-000.ts[0m     ]][border:│]",
  "[borderAccent:├][borderAccent:────────────────────────────][border:┼][border:─────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│][BG:selectedBg:[accent:** 󰛦 [border:│][0m  agent/extensions/ide/components/file-000.ts[0m    [border:│]",
  "[borderAccent:│] 󰛦 agent/extensions/ide/comp[border:│][0m  agent/extensions/ide/components/file-001.ts[0m    [border:│]",
  "[borderAccent:│] 󰛦 agent/extensions/ide/comp[border:│][0m  agent/extensions/ide/components/file-002.ts[0m    [border:│]",
  "[borderAccent:│] 󰛦 agent/extensions/ide/comp[border:│][0m  agent/extensions/ide/components/file-003.ts[0m    [border:│]",
  "[borderAccent:│] 󰛦 agent/extensions/ide/comp[border:│][0m  agent/extensions/ide/components/file-004.ts[0m    [border:│]",
  "[borderAccent:│] 󰛦 agent/extensions/ide/comp[border:│][0m  agent/extensions/ide/components/file-005.ts[0m    [border:│]",
  "[borderAccent:│] 󰛦 agent/extensions/ide/comp[border:│][0m  agent/extensions/ide/components/file-006.ts[0m    [border:│]",
  "[borderAccent:│] 󰛦 agent/extensions/ide/comp[border:│][0m  agent/extensions/ide/components/file-007.ts[0m    [border:│]",
  "[borderAccent:│] 󰛦 agent/extensions/ide/comp[border:│][0m  agent/extensions/ide/components/file-008.ts[0m    [border:│]",
  "[borderAccent:│] 󰛦 agent/extensions/ide/comp[border:│][0m  agent/extensions/ide/components/file-009.ts[0m    [border:│]",
  "[borderAccent:├][borderAccent:────────────────────────────][border:┴][border:─────────────────────────────────────────────────][border:┤]",
  "[border:│][dim: ↑ nav  pgup scroll  ctrl+e edit  ctrl+i insert  ctrl+t inspect  ctrl+d delete][border:│]",
  "[border:╰][border:──────────────────────────────────────────────────────────────────────────────][border:╯]",
]
`;

exports[`files — list row rendering > given a long file list > renders scrollable rows with consistent padding for all visible items 1`] = `
[
  "[borderAccent:╭][borderAccent:──────────────────────────────────────────][border:┬][border:───────────────────────────────────────────────────────────────────────────][border:╮]",
  "[borderAccent:│][borderAccent:[accent: Files (0 selected) (15/15)[0m               ]][border:│][border:[accent: agent/extensions/ide/components/files.ts[0m                                  ]][border:│]",
  "[borderAccent:├][borderAccent:──────────────────────────────────────────][border:┼][border:───────────────────────────────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│][BG:selectedBg:[accent:** 󰛦 agent/extensio[border:│][0m  agent/extensions/ide/components/files.ts[0m                                 [border:│]",
  "[borderAccent:│] 󰛦 agent/extensions/ide/components/list-pi[border:│][0m  agent/extensions/ide/components/list-picker.ts[0m                           [border:│]",
  "[borderAccent:│] 󰛦 agent/extensions/ide/components/split-p[border:│][0m  agent/extensions/ide/components/split-panel/border.ts[0m                    [border:│]",
  "[borderAccent:│] 󰛦 agent/extensions/nix/nix.test.ts[0m       [border:│][0m  agent/extensions/nix/nix.test.ts[0m                                         [border:│]",
  "[borderAccent:│] 󰛦 agent/extensions/gh/index.ts[0m           [border:│][0m  agent/extensions/gh/index.ts[0m                                             [border:│]",
  "[borderAccent:│] 󰛦 agent/shared/tool-utils.ts[0m             [border:│][0m  agent/shared/tool-utils.ts[0m                                               [border:│]",
  "[borderAccent:│] 󰛦 agent/extensions/usage/usage.test.ts[0m   [border:│][0m  agent/extensions/usage/usage.test.ts[0m                                     [border:│]",
  "[borderAccent:│] 󱄅 flake.nix[0m                              [border:│][0m  flake.nix[0m                                                                [border:│]",
  "[borderAccent:│] 󰎙 package.json[0m                           [border:│][0m  package.json[0m                                                             [border:│]",
  "[borderAccent:│] 󰍔 README.md[0m                              [border:│][0m  README.md[0m                                                                [border:│]",
  "[borderAccent:│] 󱘗 src/main.rs[0m                            [border:│][0m  src/main.rs[0m                                                              [border:│]",
  "[borderAccent:│] 󰟓 src/lib.go[0m                             [border:│][0m  src/lib.go[0m                                                               [border:│]",
  "[borderAccent:│] 󰈙 __snapshots__/files.test.ts.snap[0m       [border:│][0m  __snapshots__/files.test.ts.snap[0m                                         [border:│]",
  "[borderAccent:│] 󰛦 __tests__/test.test.ts[0m                 [border:│][0m  __tests__/test.test.ts[0m                                                   [border:│]",
  "[borderAccent:│] 󰈙 .gitignore[0m                             [border:│][0m  .gitignore[0m                                                               [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:├][borderAccent:──────────────────────────────────────────][border:┴][border:───────────────────────────────────────────────────────────────────────────][border:┤]",
  "[border:│][dim: ↑ nav  pgup scroll  ctrl+e edit  ctrl+i insert  ctrl+t inspect  ctrl+d delete  ctrl+u used-by  space select  ctrl+s s][border:│]",
  "[border:╰][border:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][border:╯]",
]
`;

exports[`files — list row rendering > given a search query filter > renders filtered results with consistent padding 1`] = `
[
  "[borderAccent:╭][borderAccent:──────────────────────────────────────────][border:┬][border:───────────────────────────────────────────────────────────────────────────][border:╮]",
  "[borderAccent:│][borderAccent:[accent: Search: agent (3/5)[0m                      ]][border:│][border:[accent: agent.ts[0m                                                                  ]][border:│]",
  "[borderAccent:├][borderAccent:──────────────────────────────────────────][border:┼][border:───────────────────────────────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│][BG:selectedBg:[accent:** 󰛦 agent.ts**][0m   [border:│][0m  agent.ts[0m                                                                 [border:│]",
  "[borderAccent:│] 󰛦 agent/index.ts[0m                         [border:│][0m  agent/index.ts[0m                                                           [border:│]",
  "[borderAccent:│] 󰛦 agent/test.ts[0m                          [border:│][0m  config.yaml[0m                                                              [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m  README.md[0m                                                                [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m  agent/test.ts[0m                                                            [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:├][borderAccent:──────────────────────────────────────────][border:┴][border:───────────────────────────────────────────────────────────────────────────][border:┤]",
  "[border:│][dim: ↑ nav  pgup scroll  ctrl+e edit  ctrl+i insert  ctrl+t inspect  ctrl+d delete  ctrl+u used-by  space select  ctrl+s s][border:│]",
  "[border:╰][border:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][border:╯]",
]
`;

exports[`files — list row rendering > given an empty file list > renders the no items message with consistent padding 1`] = `
[
  "[borderAccent:╭][borderAccent:──────────────────────────────────────────][border:┬][border:───────────────────────────────────────────────────────────────────────────][border:╮]",
  "[borderAccent:│][borderAccent:[accent: Files (0 selected) (0/0)[0m                 ]][border:│][border:[accent: Source Preview[0m                                                            ]][border:│]",
  "[borderAccent:├][borderAccent:──────────────────────────────────────────][border:┼][border:───────────────────────────────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│][dim: No items found[0m                      [border:│][0m[dim:  No preview available][0m                                               [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:├][borderAccent:──────────────────────────────────────────][border:┴][border:───────────────────────────────────────────────────────────────────────────][border:┤]",
  "[border:│][dim: ↑ nav  pgup scroll  ctrl+e edit[0m                                                                                      ][border:│]",
  "[border:╰][border:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][border:╯]",
]
`;

exports[`files — list row rendering > given different terminal widths > renders with consistent padding at narrow width 1`] = `
[
  "[borderAccent:╭][borderAccent:─────────────────────][border:┬][border:────────────────────────────────────][border:╮]",
  "[borderAccent:│][borderAccent:[accent: Files (0 selected) (]][border:│][border:[accent: a.ts[0m                               ]][border:│]",
  "[borderAccent:├][borderAccent:─────────────────────][border:┼][border:────────────────────────────────────][border:┤]",
  "[borderAccent:│][BG:selectedBg:[accen[border:│][0m  a.ts[0m                              [border:│]",
  "[borderAccent:│] 󰛦 long-file-name-her[border:│][0m  long-file-name-here.ts[0m            [border:│]",
  "[borderAccent:│] 󰛦 c.ts[0m              [border:│][0m  c.ts[0m                              [border:│]",
  "[borderAccent:│][0m                     [border:│][0m  [0m                                  [border:│]",
  "[borderAccent:│][0m                     [border:│][0m                                    [border:│]",
  "[borderAccent:│][0m                     [border:│][0m                                    [border:│]",
  "[borderAccent:│][0m                     [border:│][0m                                    [border:│]",
  "[borderAccent:│][0m                     [border:│][0m                                    [border:│]",
  "[borderAccent:│][0m                     [border:│][0m                                    [border:│]",
  "[borderAccent:│][0m                     [border:│][0m                                    [border:│]",
  "[borderAccent:│][0m                     [border:│][0m                                    [border:│]",
  "[borderAccent:│][0m                     [border:│][0m                                    [border:│]",
  "[borderAccent:│][0m                     [border:│][0m                                    [border:│]",
  "[borderAccent:│][0m                     [border:│][0m                                    [border:│]",
  "[borderAccent:│][0m                     [border:│][0m                                    [border:│]",
  "[borderAccent:│][0m                     [border:│][0m                                    [border:│]",
  "[borderAccent:│][0m                     [border:│][0m                                    [border:│]",
  "[borderAccent:│][0m                     [border:│][0m                                    [border:│]",
  "[borderAccent:│][0m                     [border:│][0m                                    [border:│]",
  "[borderAccent:│][0m                     [border:│][0m                                    [border:│]",
  "[borderAccent:│][0m                     [border:│][0m                                    [border:│]",
  "[borderAccent:│][0m                     [border:│][0m                                    [border:│]",
  "[borderAccent:│][0m                     [border:│][0m                                    [border:│]",
  "[borderAccent:│][0m                     [border:│][0m                                    [border:│]",
  "[borderAccent:│][0m                     [border:│][0m                                    [border:│]",
  "[borderAccent:├][borderAccent:─────────────────────][border:┴][border:────────────────────────────────────][border:┤]",
  "[border:│][dim: ↑ nav  pgup scroll  ctrl+e edit  ctrl+i insert  ctrl+t in][border:│]",
  "[border:╰][border:──────────────────────────────────────────────────────────][border:╯]",
]
`;

exports[`files — list row rendering > given different terminal widths > renders with consistent padding at wide width 1`] = `
[
  "[borderAccent:╭][borderAccent:────────────────────────────────────────────────────────][border:┬][border:─────────────────────────────────────────────────────────────────────────────────────────────────────][border:╮]",
  "[borderAccent:│][borderAccent:[accent: Files (0 selected) (3/3)[0m                               ]][border:│][border:[accent: a.ts[0m                                                                                                ]][border:│]",
  "[borderAccent:├][borderAccent:────────────────────────────────────────────────────────][border:┼][border:─────────────────────────────────────────────────────────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│][BG:selectedBg:[accent:** 󰛦 a.ts**][0m                     [border:│][0m  a.ts[0m                                                                                               [border:│]",
  "[borderAccent:│] 󰛦 b.ts[0m                                                 [border:│][0m  b.ts[0m                                                                                               [border:│]",
  "[borderAccent:│] 󰛦 c.ts[0m                                                 [border:│][0m  c.ts[0m                                                                                               [border:│]",
  "[borderAccent:│][0m                                                        [border:│][0m  [0m                                                                                                   [border:│]",
  "[borderAccent:│][0m                                                        [border:│][0m                                                                                                     [border:│]",
  "[borderAccent:│][0m                                                        [border:│][0m                                                                                                     [border:│]",
  "[borderAccent:│][0m                                                        [border:│][0m                                                                                                     [border:│]",
  "[borderAccent:│][0m                                                        [border:│][0m                                                                                                     [border:│]",
  "[borderAccent:│][0m                                                        [border:│][0m                                                                                                     [border:│]",
  "[borderAccent:│][0m                                                        [border:│][0m                                                                                                     [border:│]",
  "[borderAccent:│][0m                                                        [border:│][0m                                                                                                     [border:│]",
  "[borderAccent:│][0m                                                        [border:│][0m                                                                                                     [border:│]",
  "[borderAccent:│][0m                                                        [border:│][0m                                                                                                     [border:│]",
  "[borderAccent:│][0m                                                        [border:│][0m                                                                                                     [border:│]",
  "[borderAccent:│][0m                                                        [border:│][0m                                                                                                     [border:│]",
  "[borderAccent:│][0m                                                        [border:│][0m                                                                                                     [border:│]",
  "[borderAccent:│][0m                                                        [border:│][0m                                                                                                     [border:│]",
  "[borderAccent:│][0m                                                        [border:│][0m                                                                                                     [border:│]",
  "[borderAccent:│][0m                                                        [border:│][0m                                                                                                     [border:│]",
  "[borderAccent:│][0m                                                        [border:│][0m                                                                                                     [border:│]",
  "[borderAccent:│][0m                                                        [border:│][0m                                                                                                     [border:│]",
  "[borderAccent:│][0m                                                        [border:│][0m                                                                                                     [border:│]",
  "[borderAccent:│][0m                                                        [border:│][0m                                                                                                     [border:│]",
  "[borderAccent:│][0m                                                        [border:│][0m                                                                                                     [border:│]",
  "[borderAccent:│][0m                                                        [border:│][0m                                                                                                     [border:│]",
  "[borderAccent:├][borderAccent:────────────────────────────────────────────────────────][border:┴][border:─────────────────────────────────────────────────────────────────────────────────────────────────────][border:┤]",
  "[border:│][dim: ↑ nav  pgup scroll  ctrl+e edit  ctrl+i insert  ctrl+t inspect  ctrl+d delete  ctrl+u used-by  space select  ctrl+s split[0m                                    ][border:│]",
  "[border:╰][border:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][border:╯]",
]
`;

exports[`files — list row rendering > given files with different icon types > renders rows consistently for TypeScript files 1`] = `
[
  "[borderAccent:╭][borderAccent:──────────────────────────────────────────][border:┬][border:───────────────────────────────────────────────────────────────────────────][border:╮]",
  "[borderAccent:│][borderAccent:[accent: Files (0 selected) (4/4)[0m                 ]][border:│][border:[accent: index.ts[0m                                                                  ]][border:│]",
  "[borderAccent:├][borderAccent:──────────────────────────────────────────][border:┼][border:───────────────────────────────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│][BG:selectedBg:[accent:** 󰛦 index.ts**][0m   [border:│][0m  index.ts[0m                                                                 [border:│]",
  "[borderAccent:│] 󰜈 app.tsx[0m                                [border:│][0m  app.tsx[0m                                                                  [border:│]",
  "[borderAccent:│] 󰛦 config.mts[0m                             [border:│][0m  config.mts[0m                                                               [border:│]",
  "[borderAccent:│] 󰛦 utils.cts[0m                              [border:│][0m  utils.cts[0m                                                                [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m  [0m                                                                         [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:├][borderAccent:──────────────────────────────────────────][border:┴][border:───────────────────────────────────────────────────────────────────────────][border:┤]",
  "[border:│][dim: ↑ nav  pgup scroll  ctrl+e edit  ctrl+i insert  ctrl+t inspect  ctrl+d delete  ctrl+u used-by  space select  ctrl+s s][border:│]",
  "[border:╰][border:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][border:╯]",
]
`;

exports[`files — list row rendering > given files with different icon types > renders rows consistently for YAML/Nix files 1`] = `
[
  "[borderAccent:╭][borderAccent:──────────────────────────────────────────][border:┬][border:───────────────────────────────────────────────────────────────────────────][border:╮]",
  "[borderAccent:│][borderAccent:[accent: Files (0 selected) (4/4)[0m                 ]][border:│][border:[accent: flake.nix[0m                                                                 ]][border:│]",
  "[borderAccent:├][borderAccent:──────────────────────────────────────────][border:┼][border:───────────────────────────────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│][BG:selectedBg:[accent:** 󱄅 flake.nix**][0m  [border:│][0m  flake.nix[0m                                                                [border:│]",
  "[borderAccent:│] 󰡨 docker-compose.yml[0m                     [border:│][0m  docker-compose.yml[0m                                                       [border:│]",
  "[borderAccent:│] 󰈙 config.yaml[0m                            [border:│][0m  config.yaml[0m                                                              [border:│]",
  "[borderAccent:│] 󰈙 .env[0m                                   [border:│][0m  .env[0m                                                                     [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m  [0m                                                                         [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:├][borderAccent:──────────────────────────────────────────][border:┴][border:───────────────────────────────────────────────────────────────────────────][border:┤]",
  "[border:│][dim: ↑ nav  pgup scroll  ctrl+e edit  ctrl+i insert  ctrl+t inspect  ctrl+d delete  ctrl+u used-by  space select  ctrl+s s][border:│]",
  "[border:╰][border:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][border:╯]",
]
`;

exports[`files — list row rendering > given files with different icon types > renders rows consistently for various file types in mixed list 1`] = `
[
  "[borderAccent:╭][borderAccent:──────────────────────────────────────────][border:┬][border:───────────────────────────────────────────────────────────────────────────][border:╮]",
  "[borderAccent:│][borderAccent:[accent: Files (0 selected) (10/10)[0m               ]][border:│][border:[accent: src/main.ts[0m                                                               ]][border:│]",
  "[borderAccent:├][borderAccent:──────────────────────────────────────────][border:┼][border:───────────────────────────────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│][BG:selectedBg:[accent:** 󰛦 src/main.ts**][border:│][0m  src/main.ts[0m                                                              [border:│]",
  "[borderAccent:│] 󱄅 flake.lock[0m                             [border:│][0m  flake.lock[0m                                                               [border:│]",
  "[borderAccent:│] 󰎙 package.json[0m                           [border:│][0m  package.json[0m                                                             [border:│]",
  "[borderAccent:│] 󰡨 Dockerfile[0m                             [border:│][0m  Dockerfile[0m                                                               [border:│]",
  "[borderAccent:│] 󱁤 Makefile[0m                               [border:│][0m  Makefile[0m                                                                 [border:│]",
  "[borderAccent:│] 󰈙 .gitignore[0m                             [border:│][0m  .gitignore[0m                                                               [border:│]",
  "[borderAccent:│] 󰍔 README.md[0m                              [border:│][0m  README.md[0m                                                                [border:│]",
  "[borderAccent:│] 󱘗 Cargo.toml[0m                             [border:│][0m  Cargo.toml[0m                                                               [border:│]",
  "[borderAccent:│] 󰟓 go.mod[0m                                 [border:│][0m  go.mod[0m                                                                   [border:│]",
  "[borderAccent:│] 󰌠 requirements.txt[0m                       [border:│][0m  requirements.txt[0m                                                         [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:├][borderAccent:──────────────────────────────────────────][border:┴][border:───────────────────────────────────────────────────────────────────────────][border:┤]",
  "[border:│][dim: ↑ nav  pgup scroll  ctrl+e edit  ctrl+i insert  ctrl+t inspect  ctrl+d delete  ctrl+u used-by  space select  ctrl+s s][border:│]",
  "[border:╰][border:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][border:╯]",
]
`;

exports[`files — list row rendering > given selected files > renders all selected rows with consistent left padding regardless of position 1`] = `
[
  "[borderAccent:╭][borderAccent:──────────────────────────────────────────][border:┬][border:───────────────────────────────────────────────────────────────────────────][border:╮]",
  "[borderAccent:│][borderAccent:[accent: Files (2 selected) (3/3)[0m                 ]][border:│][border:[accent: short.ts[0m                                                                  ]][border:│]",
  "[borderAccent:├][borderAccent:──────────────────────────────────────────][border:┼][border:───────────────────────────────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│][BG:selectedBg:[accent:** [accent:✓]󰛦 shor[border:│][0m  short.ts[0m                                                                 [border:│]",
  "[borderAccent:│] 󰛦 a-very-long-file-name-that-needs-trunca[border:│][0m  a-very-long-file-name-that-needs-truncation.ts[0m                           [border:│]",
  "[borderAccent:│] [accent:✓]󰛦 medium.ts[0m                    [border:│][0m  medium.ts[0m                                                                [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:├][borderAccent:──────────────────────────────────────────][border:┴][border:───────────────────────────────────────────────────────────────────────────][border:┤]",
  "[border:│][dim: ↑ nav  pgup scroll  ctrl+e edit  ctrl+i insert  ctrl+t inspect  ctrl+d delete  ctrl+u used-by  space select  ctrl+s s][border:│]",
  "[border:╰][border:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][border:╯]",
]
`;

exports[`files — list row rendering > given selected files > renders selected rows with checkmark prefix and consistent padding 1`] = `
[
  "[borderAccent:╭][borderAccent:──────────────────────────────────────────][border:┬][border:───────────────────────────────────────────────────────────────────────────][border:╮]",
  "[borderAccent:│][borderAccent:[accent: Files (2 selected) (3/3)[0m                 ]][border:│][border:[accent: file-a.ts[0m                                                                 ]][border:│]",
  "[borderAccent:├][borderAccent:──────────────────────────────────────────][border:┼][border:───────────────────────────────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│][BG:selectedBg:[accent:** [accent:✓]󰛦 file[border:│][0m  file-a.ts[0m                                                                [border:│]",
  "[borderAccent:│] 󰛦 file-b.ts[0m                              [border:│][0m  file-b.ts[0m                                                                [border:│]",
  "[borderAccent:│] [accent:✓]󰛦 file-c.ts[0m                    [border:│][0m  file-c.ts[0m                                                                [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m  [0m                                                                         [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:├][borderAccent:──────────────────────────────────────────][border:┴][border:───────────────────────────────────────────────────────────────────────────][border:┤]",
  "[border:│][dim: ↑ nav  pgup scroll  ctrl+e edit  ctrl+i insert  ctrl+t inspect  ctrl+d delete  ctrl+u used-by  space select  ctrl+s s][border:│]",
  "[border:╰][border:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][border:╯]",
]
`;
